--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World!
+<!DOCTYPE html>
+</html>
+    <head>
+        <title>CSCE 190: Jason Tran</title>
+    </head>
+    <body>
+
+    </body>
+</html>
