--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>CSCE 190: Jason Tran</title>
     </head>
     <body>
+        <h1>Jason Tran's CSCE 190</h1>
 
+        <p>I &hearts; coding!</p>
     </body>
 </html>
