--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-</html>
+<html>
     <head>
         <title>CSCE 190: Jason Tran</title>
     </head>
     <body>
         <h1>Jason Tran's CSCE 190</h1>
 
-        <p>I &hearts; coding!</p>
+        <section class="assignment">
+            <a href="PDFs/problem-statement.pdf"><img src="images/problem-statement.png"></a>
+            <section class="ass-details">
+                <a href="PDFs/problem-statement.pdf"><h2>Problem Statement: Quarantine Dash</h2></a>
+                <p>
+                    Our users are frustrated that while they are in quarantine they do not get a chance to choose what food they eat. They receive premade boxed meals delivered to their doors for each meal. Our solution should provide these students with the ability to choose and order food through the university meal plan and have it delivered to their door.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
