--- a/index.html
+++ b/index.html
@@ -6,12 +6,24 @@
     <body>
         <h1>Jason Tran's CSCE 190</h1>
 
+        <!-- Problem Statement Assignment-->
         <section class="assignment">
             <a href="PDFs/problem-statement.pdf"><img src="images/problem-statement.png"></a>
             <section class="ass-details">
                 <a href="PDFs/problem-statement.pdf"><h2>Problem Statement: Quarantine Dash</h2></a>
                 <p>
                     Our users are frustrated that while they are in quarantine they do not get a chance to choose what food they eat. They receive premade boxed meals delivered to their doors for each meal. Our solution should provide these students with the ability to choose and order food through the university meal plan and have it delivered to their door.
+                </p>
+            </section>
+        </section>
+
+        <!-- Affinity Diagram Assignment-->
+        <section class="assignment">
+            <a href="PDFs/affinity-diagram.pdf"><img src="images/affinity-diagram.png"></a>
+            <section class="ass-details">
+                <a href="PDFs/affinity-diagram.pdf"><h2>Affinity Diagram: Quarantine Dash</h2></a>
+                <p>
+                    We, as a group, came up with as many ideas, as we could, to implement into our quarantine food delivery service app, Quarantine Dash.
                 </p>
             </section>
         </section>
