--- a/index.html
+++ b/index.html
@@ -28,5 +28,46 @@
                 </p>
             </section>
         </section>
+
+         <!-- Persona Assignment-->
+         <section class="assignment">
+            <a href="PDFs/Persona1.pdf"><img src="images/Persona1.png"></a>
+            <section class="ass-details">
+                <a href="PDFs/Persona1.pdf"><h2>Persona 1: Jeffrey Jefferson</h2></a>
+                <p>
+                    A persona of a typical elderly Italian Quarantine Dash app user.
+                </p>
+            </section>
+        </section>
+
+        <section class="assignment">
+            <a href="PDFs/Persona2.pdf"><img src="images/Persona2.png"></a>
+            <section class="ass-details">
+                <a href="PDFs/Persona2.pdf"><h2>Persona 2: Patricia Peterson</h2></a>
+                <p>
+                    A persona of a typical at-risk hypersensitive Quarantine Dash app user.
+                </p>
+            </section>
+        </section>
+
+        <section class="assignment">
+            <a href="PDFs/Persona3.pdf"><img src="images/Persona3.png"></a>
+            <section class="ass-details">
+                <a href="PDFs/Persona3.pdf"><h2>Persona 3: Melinda Carter</h2></a>
+                <p>
+                    A persona of a typical busy hustling Quarantine Dash app user.
+                </p>
+            </section>
+        </section>
+
+        <section class="assignment">
+            <a href="PDFs/Persona4.pdf"><img src="images/Persona4.png"></a>
+            <section class="ass-details">
+                <a href="PDFs/Persona4.pdf"><h2>Persona 4: Joe Schmoe</h2></a>
+                <p>
+                    A persona of a typical low-income family-oriented Quarantine Dash app user.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
