--- a/CSCE 190/index.html
+++ b/CSCE 190/index.html
@@ -69,5 +69,27 @@
                 </p>
             </section>
         </section>
+
+        <!-- Storyboard Assignment-->
+        <section class="assignment">
+            <a href="PDFs/combined-storyboard.pdf"><img src="images/Storyboard.png"></a>
+            <section class="ass-details">
+                <a href="PDFs/combined-storyboard.pdf"><h2>My Team's Storyboards</h2></a>
+                <p>
+                    Different storyboards, that my team and I created, containing different scenarios of people using our app.
+                </p>
+            </section>
+        </section>
+
+        <!-- Sketches Assignment-->
+        <section class="assignment">
+            <a href="PDFs/merged-sketches.pdf"><img src="images/Sketch.png"></a>
+            <section class="ass-details">
+                <a href="PDFs/merged-sketches.pdf"><h2>My Team's Sketches</h2></a>
+                <p>
+                    This is all of my team's ideas put into different rough sketches of what we think the final app should look like.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
