--- a/index.html
+++ b/index.html
@@ -99,7 +99,18 @@
                 <a href="https://www.youtube.com/watch?v=2up4YHsniEg"><img src="images/paper-prototype.png"></a>
                 <section class="ass-details">
                     <p>
-                        This is rough idea of how the app will work with a user.
+                        This is a rough idea of how the app will work with a user.
+                    </p>
+                </section>
+            </section>
+
+            <!-- Hi-Fi Prototype Assignment-->
+            <section class="assignment">
+                <a href="QuarantineDashApp.pdf"><h2>My Hi-Fi Prototype</h2></a>
+                <a href="QuarantineDashApp.pdf"><img src="QuarantineDash.png"></a>
+                <section class="ass-details">
+                    <p>
+                        This is a realistic idea of how the app will work with a user.
                     </p>
                 </section>
             </section>
